--- a/style.css
+++ b/style.css
@@ -35,6 +35,8 @@ nav ul li a{
     text-transform: uppercase;
     font-weight: bold;
     line-height: 50px;
+}
 
-
+nav ul li a.active{
+    background:#f00;
 }
