--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ header{
 nav{
     width: 100%;
     height: 50px;
-    background: rgba(0, 0, 0, 0.8);
+    background: rgb(44, 44, 44);
     border-top: 1px solid rgba(255,255,255,.2);
     border-bottom: 1px solid rgba(255,255,255,.2);
     position:sticky;
